| Bug #21531 | EXPORT_SET() doesn't accept args with coercible character sets | ||
|---|---|---|---|
| Submitted: | 9 Aug 2006 10:38 | Modified: | 25 Sep 2006 21:42 |
| Reporter: | Timothy Smith | ||
| Status: | Closed | ||
| Category: | Server: Charsets | Severity: | S3 (Non-critical) |
| Version: | 4.1 | OS: | |
| Assigned to: | Timothy Smith | Target Version: | |
[9 Aug 2006 10:38]
Timothy Smith
[9 Aug 2006 10:49]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/10190 ChangeSet@1.2541, 2006-08-09 02:48:34-06:00, tsmith@siva.hindu.god +2 -0 Bug #21531: EXPORT_SET() doesn't accept args with coercible character sets - Remove default value for 'flags' argument of agg_arg_charsets() - Move MY_COLL_ALLOW_CONV inside the agg_arg_charsets() function, not outside it, in Item_func_export_set::fix_length_and_dec()
[24 Aug 2006 2:02]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/10802 ChangeSet@1.2537, 2006-08-23 18:02:31-06:00, tsmith@siva.hindu.god +4 -0 Bug #21531: EXPORT_SET() doesn't accept args with coercible character sets - Fix typo in Item_func_export_set::fix_length_and_dec() which caused character set aggregation to fail - Remove default argument from last arg of agg_arg_charsets() function, to reduce potential errors
[31 Aug 2006 13:42]
Magnus Blaudd
Pushed to 5.0.25
[25 Sep 2006 21:42]
Paul DuBois
Noted in 4.1.22, 5.0.25 changelogs.
