Bug #21531: EXPORT_SET() doesn't accept args with coercible character sets

- Fix typo in Item_func_export_set::fix_length_and_dec() which caused character set aggregation to fail
- Remove default argument from last arg of agg_arg_charsets() function, to reduce potential errors